fix dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,7 @@
     --black-3: rgba(0, 0, 0, .03);
     --black: #000000;
     --white: #FFFFFF;
+    --voxel-color: #ff67bd;
     --accent-h: 348;
     --accent-s: 70%;
     --accent-l: 40%;
@@ -52,6 +53,7 @@
     --glass-edge: rgba(255, 255, 255, 0.1);
     --focus-outline: 2px solid var(--accent-color);
     --focus-outline-offset: 2px;
+
 
     /* Typography */
     --font-stack-serif: 'Copernicus', serif;
@@ -164,6 +166,8 @@
         --text-secondary: rgba(255, 255, 255, .75);
         --background-color: #1a1a1a;
         --background-color-dark: #2A2A2A;
+
+        --voxel-color: #72ff2b;
 
         --accent-h: 348;
         --accent-s: 80%;
